# tinyclaw-office

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  BLOCKER_SUMMARY.md  PR_RESPONSE.md  TASK_COMPLETION_SUMMARY.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.auto-claude/specs/001-integrate-memory-management-tools/: implementation_plan.json
.auto-claude/specs/003-fix-review-comments-on-pr-1/: INVESTIGATION.md  build-progress.txt  implementation_plan.json
dashboard/: .env.example  .eslintrc.json  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/memory/: page.tsx
dashboard/components/: AgentList.tsx  MemoryView.tsx
lib/: __init__.py  memory_compressor.py
scripts/: init-postgres.sql  init_db.py
skills/: __init__.py
skills/claw-compactor/lib/: observer.py
skills/claw_compactor/: __init__.py  integration.py
skills/claw_compactor/lib/: __init__.py  config.py  dictionary.py  exceptions.py  rle.py  tierify.py  tokenizer_optimizer.py  tokens.py
skills/claw_compactor/scripts/: mem_compress.py
src/: __init__.py
src/gondolin_integration/: client.ts  logging.ts  package.json  sandbox.ts  service.ts  tsconfig.json
src/memu_integration/: __init__.py  client.py  models.py  service.py
src/orchestration/: __init__.py  api.py  coordinator.py
src/orchestration/routes/: __init__.py  agents.py  execution.py  memory.py
src/shared/: __init__.py  auth.py  config.py  errors.py  logging.py
src/tinyclaw_integration/: __init__.py  client.py  models.py  service.py
tests/: __init__.py  test_auth.py  test_endpoint_paths.py  test_gondolin.py  test_memu.py  test_orchestration.py  test_tinyclaw.py
